objects/ASI_FOC_PO__c.object
<CustomObject>
    <description>used for PR China FOC</description>
    <fields>
        <fullName>ASI_CRM_AB_Policy_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Policy Number</label>
        <referenceTo>ASI_CRM_Anti_Bribery__c</referenceTo>
        <relationshipLabel>Consumer A&amp;P PO</relationshipLabel>
        <relationshipName>Consumer_A_P_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_ID_15__c</fullName>
        <formula>LEFT( Id , 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID(15)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Consumed_Amount__c</fullName>
        <label>PO Consumed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Date_FY__c</fullName>
        <formula>IF (
MONTH(  ASI_FOC_Date__c )&gt; 6,
&apos;FY&apos; &amp; RIGHT(TEXT(YEAR(ASI_FOC_Date__c )),2),
&apos;FY&apos; &amp; RIGHT(TEXT(YEAR(ASI_FOC_Date__c )-1),2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_PO Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_External_ID__c</fullName>
        <description>for integration purpose</description>
        <externalId>true</externalId>
        <label>PO External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Final_Amount__c</fullName>
        <label>PO Final Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Remaining_Amount__c</fullName>
        <formula>ASI_FOC_PO_Final_Amount__c -  ASI_FOC_PO_Consumed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Sub_brand__c</fullName>
        <label>PO Sub-brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Today_FY__c</fullName>
        <formula>IF (
MONTH(TODAY())&gt; 6,
&apos;FY&apos; &amp; RIGHT(TEXT(YEAR(TODAY())),2),
&apos;FY&apos; &amp; RIGHT(TEXT(YEAR(TODAY())-1),2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_Today FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Valid_for_FOC__c</fullName>
        <formula>IF ( 
MONTH( ASI_FOC_Date__c )&gt; 6, 
VALUE(RIGHT(TEXT(YEAR(ASI_FOC_Date__c )),2)), 
VALUE(RIGHT(TEXT(YEAR(ASI_FOC_Date__c )-1),2)) 
)
&gt;=
IF ( 
MONTH(TODAY())&gt; 6, 
VALUE(RIGHT(TEXT(YEAR(TODAY())),2)), 
VALUE(RIGHT(TEXT(YEAR(TODAY())-1),2)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid for FOC</label>
        <type>Checkbox</type>
    </fields>
    <label>Consumer A&amp;P PO</label>
    <listViews>
        <fullName>ALL_CN_PO</fullName>
        <columns>NAME</columns>
        <columns>ASI_FOC_PO_Sub_brand__c</columns>
        <columns>ASI_FOC_PO_Final_Amount__c</columns>
        <columns>ASI_FOC_PO_Consumed_Amount__c</columns>
        <columns>ASI_FOC_PO_Remaining_Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_PO__c.ASI_FOC_CN_PO</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>22204224</value>
        </filters>
        <label>All CN PO - Search</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Valid_Consumer_A_P_PO</fullName>
        <columns>ASI_FOC_Valid_for_FOC__c</columns>
        <columns>NAME</columns>
        <columns>ASI_FOC_Date__c</columns>
        <columns>ASI_FOC_PO_Consumed_Amount__c</columns>
        <columns>ASI_FOC_PO_Final_Amount__c</columns>
        <columns>ASI_FOC_PO_Remaining_Amount__c</columns>
        <columns>ASI_FOC_PO_Date_FY__c</columns>
        <columns>ASI_FOC_Today_FY__c</columns>
        <columns>ASI_FOC_PO_External_ID__c</columns>
        <columns>ASI_FOC_ID_15__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_PO__c.ASI_FOC_CN_PO</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>22184492,25181028</value>
        </filters>
        <label>All Effective Consumer A&amp;P PO</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>PO Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumer A&amp;P PO</pluralLabel>
    <recordTypes>
        <fullName>ASI_FOC_CN_PO</fullName>
        <active>true</active>
        <description>used by FOC</description>
        <label>CN FOC PO</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASI_FOC_Do_not_allow_PO_Number_Change</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The PO Number cannot be changed</errorMessage>
    </validationRules>
</CustomObject>